# Arduino-Rust-Sandbox

./: .gitignore  Cargo.toml  README.md
docs/: .rustc_info.json  .rustdoc_fingerprint.json
docs/avr-atmega328p/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/avr-atmega328p/doc/lcd_example/: all.html  fn.borrow_uart.html  index.html  sidebar-items.js
docs/avr-atmega328p/doc/lcd_example/lib/: index.html  sidebar-items.js
docs/avr-atmega328p/doc/lcd_example/lib/lcd_utils/: constant.ASCII_OFFSET.html  index.html  (+28 more)
docs/avr-atmega328p/doc/rust_arduino_test/: all.html  fn.borrow_uart.html  index.html  sidebar-items.js
docs/avr-atmega328p/doc/rust_arduino_test/lcd_utils/: constant.ASCII_OFFSET.html  constant.BIT_0.html  constant.BIT_1.html  constant.BIT_2.html  constant.BIT_3.html  constant.BIT_4.html  constant.BIT_5.html  constant.BIT_6.html  constant.BIT_7.html  constant.D0_PIN.html  constant.D1_PIN.html  constant.D2_PIN.html  constant.D3_PIN.html  constant.D4_PIN.html  constant.D5_PIN.html  constant.D6_PIN.html  constant.D7_PIN.html  constant.ENABLE_PIN.html  constant.LED_PIN.html  constant.MAX_LENGTH.html  constant.MS_DELAY.html  constant.READ_WRITE_PIN.html  constant.REGISTER_SEL.html  fn.clear_data_bits.html  fn.float_to_array.html  fn.reset_lcd.html  fn.test_write_char.html  fn.write_char_array.html  fn.write_static_string.html  index.html  sidebar-items.js
docs/avr-atmega328p/doc/src/lcd_example/: lcd_example.rs.html
docs/avr-atmega328p/doc/src/rust_arduino_test/: lcd_utils.rs.html  main.rs.html
src/: lcd_utils.rs  main.rs
(+2 files in other folders)
